Fix wrapping

--- a/src/css/tabs/pid_tuning.css
+++ b/src/css/tabs/pid_tuning.css
@@ -299,6 +299,7 @@
 
 .tab-pid_tuning table.compensation .suboption {
     margin-left: 4%;
+    white-space: nowrap;
 }
 
 .tab-pid_tuning table.compensation .suboption select{
